Index now links to form Post-submission page also now links back to form

--- a/miniflask/view/templates/index.html
+++ b/miniflask/view/templates/index.html
@@ -3,6 +3,6 @@
 {% block content %}
 
 <h1>Index Page</h1>
-<p>This is just an index page</p>
+<p><a href="{{ url_for('controller.form') }}">Go to form</a></p>
 
 {% endblock %}
